5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1594_1804.log
== TEST (2019-04-04 16:06:46) 
-- CODE:
pontoAx float(input("Digite ponto Ax: "))
pontoAy float(input("Digite ponto Ay: "))
pontoBx float(input("Digite ponto Bx: "))
pontoBy float(input("Digite ponto By: "))

d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))
-- ERROR:
File "XXXX", line 1
    pontoAx float(input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:13) 
-- CODE:
pontoAx = float(input("Digite ponto Ax: "))
pontoAy = float(input("Digite ponto Ay: "))
pontoBx = float(input("Digite ponto Bx: "))
pontoBy = float(input("Digite ponto By: "))

d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))
-- ERROR:
File "XXXX", line 6
    d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:46) 
-- CODE:
pontoAx = float(input("Digite ponto Ax: "))
pontoAy = float(input("Digite ponto Ay: "))
pontoBx = float(input("Digite ponto Bx: "))
pontoBy = float(input("Digite ponto By: "))

d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))

print (round(d, 3))
-- ERROR:
File "XXXX", line 6
    d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:07) 
-- CODE:
from import math*

pontoAx = float(input("Digite ponto Ax: "))
pontoAy = float(input("Digite ponto Ay: "))
pontoBx = float(input("Digite ponto Bx: "))
pontoBy = float(input("Digite ponto By: "))

d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))

print (round(d, 3))
-- ERROR:
File "XXXX", line 1
    from import math*
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:16) 
-- CODE:
from math import*

pontoAx = float(input("Digite ponto Ax: "))
pontoAy = float(input("Digite ponto Ay: "))
pontoBx = float(input("Digite ponto Bx: "))
pontoBy = float(input("Digite ponto By: "))

d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))

print (round(d, 3))
-- ERROR:
File "XXXX", line 8
    d = sqrt((pontoBx - pontoAx) ** 2) + (pontoBy - pontoAy) ** 2))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:09:22) 
-- CODE:
from math import*

pontoAx = float(input("Digite ponto Ax: "))
pontoAy = float(input("Digite ponto Ay: "))
pontoBx = float(input("Digite ponto Bx: "))
pontoBy = float(input("Digite ponto By: "))

d = sqrt(2)

print (round(d, 3))
-- OUTPUT:
1.414
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:10:02) 
-- CODE:
from math import*

pontoAx = float(input("Digite ponto Ax: "))
pontoAy = float(input("Digite ponto Ay: "))
pontoBx = float(input("Digite ponto Bx: "))
pontoBy = float(input("Digite ponto By: "))

d = sqrt((pontoBx - pontoAx))

print (round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d = sqrt((pontoBx - pontoAx))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:11:00) 
-- CODE:
from math import*

pontoAx = float(input("Digite ponto Ax: "))
pontoAy = float(input("Digite ponto Ay: "))
pontoBx = float(input("Digite ponto Bx: "))
pontoBy = float(input("Digite ponto By: "))

d = sqrt((pontoBx - pontoAx) ** 2))

print (round(d, 3))
-- ERROR:
File "XXXX", line 8
    d = sqrt((pontoBx - pontoAx) ** 2))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
